[package]
name = "rosey"
version = "0.1.0"
edition = "2021"
description = "Generate a translated version of your website based on the translation of tagged elements."
license = "MIT"

[[test]]
name = "cucumber"
harness = false   # Allows Cucumber to print output instead of libtest

[dependencies]
clap = "2.33.0"
kuchiki = "0.8.1"

[dev-dependencies]
async-trait = "0.1"
cucumber = "0.10"
tokio = { version = "1.10", features = ["macros", "rt-multi-thread", "time"] }
tempfile = "3.0.2"
