[package]
name = "rosey"
version = "0.1.0"
edition = "2021"
description = "Generate a translated version of your website based on the translation of tagged elements."
license = "MIT"

[[test]]
name = "cucumber"
harness = false   # Allows Cucumber to print output instead of libtest

[dependencies]
clap = "2.33.0"
kuchiki = "0.8.1"
serde_json = "1.0"
globwalk = "0.8.1"
base64 = "0.13.0"
sha2 = "0.9.8"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
async-trait = "0.1"
cucumber = "0.10"
json_dotpath = "1.1.0"
regex = "1"
tokio = { version = "1.10", features = ["macros", "rt-multi-thread", "time"] }
tempfile = "3.0.2"
wax = "0.2.0"
