[package]
name = "rosey"
version = "2.0.0-rc6"
edition = "2021"
description = "Generate a translated version of your website based on the translation of tagged elements."
license = "MIT"

[dependencies]
clap = "2.33.0"
kuchiki = "0.8.1"
serde_json = { version = "1.0", features = ["preserve_order"] }
globwalk = "0.8.1"
base64 = "0.13.0"
sha2 = "0.9.8"
serde = { version = "1.0", features = ["derive"] }
html5ever = "0.25.1"
regex = "1.5.4"
rayon = "1.5.1"
warp = "0.3"
tokio = { version = "1.10", features = ["macros", "rt-multi-thread", "time"] }
notify = "5.0.0"
