[package]
name = "rosey"
version = "0.0.0"
edition = "2021"
description = "Generate a translated version of your website based on the translation of tagged elements."
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = "2.33.0"
figment = { version = "0.10.7", features = ["env", "toml", "json", "yaml"] }
kuchiki = "0.8.1"
serde_json = { version = "1.0", features = ["preserve_order"] }
globwalk = "0.8.1"
base64 = "0.13.0"
sha2 = "0.10.6"
serde = { version = "1.0", features = ["derive"] }
html5ever = "0.29.1"
regex = "1.5.4"
rayon = "1.5.1"
portpicker = "0.1"
actix-web = "4"
actix-files = "0.6"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "time"] }
notify = "5.0.0"
charabia = "0.9.2"
path-slash = "0.2"
url = "2"
