[package]
name = "rosey"
version = "0.0.0"
edition = "2021"
description = "Generate a translated version of your website based on the translation of tagged elements."
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = "4.5.40"
figment = { version = "0.10.19", features = ["env", "toml", "json", "yaml"] }
kuchiki = "0.8.1"
serde_json = { version = "1.0", features = ["preserve_order"] }
globwalk = " 0.9.1"
base64 = "0.22.1"
sha2 = "0.10.9"
serde = { version = "1.0", features = ["derive"] }
html5ever = "0.25.2"
regex = "1.11.1"
rayon = "1.10.0"
portpicker = "0.1"
actix-web = "4"
actix-files = "0.6"
tokio = { version = "1.46.0", features = ["macros", "rt-multi-thread", "time"] }
notify = "8.0.0"
charabia = "0.9.6"
path-slash = "0.2"
url = "2"
